# Pattern-Recognition-and-Computer-Vision

Project 1 Real-time filtering/: CMakeLists.txt  filter.cpp  filter.h  imgDisplay.cpp  metadata.yml  readme.md  vidDisplay.cpp
Project 2 Content-based Image Retrieval/: CMakeLists.txt  ImageRetrival.cpp  csv_util.cpp  csv_util.h  featureExtration.cpp  features.cpp  features.h  metadata.yml  readme.md
Project 3 Real-time 2-D Object Recognition/: CMakeLists.txt  metadata.yml  objectRecognizer.cpp  processors.cpp  processors.h  readme.md
Project 4 Calibration and Augmented Reality/: AugmentedReality.cpp  CMakeLists.txt  harrisCorner.cpp  metadata.yml  processors.cpp  processors.h  readme.md
Project 5 Recognition Using Deep Networks/: metadata.yml
Project 5 Recognition Using Deep Networks/Project5_Final/: GREEK_Model_3.py  MNIST_Model_1.py  MNIST_Test_1.py  examNetwork_2.py  experiment_4.py  pre-trained_first-layer.py  readme.md  utils.py
RAW Images/: data.csv  metadata.yml  readme.md
